tests/algorithms/x/C/project_euler/problem_042/solution42.c
// Generated by Mochi 0.10.32 on 2025-08-23 15:27 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t triangular_numbers_len;
size_t parse_words_len;

size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * triangular_numbers(long long limit);
const char* * parse_words(const char* text);
long long word_value(const char* word);
long long contains(long long * xs, size_t xs_len, long long target);
long long solution();
int main(void);

long long * triangular_numbers(long long limit) {
    long long *res = NULL;
    size_t res_len = 0;
    long long n = 1LL;
    while (n <= limit) {
        res = list_append_long_long(res, &res_len, (n * (n + 1LL)) / 2LL);
        n = n + 1LL;
    }
    return triangular_numbers_len = res_len, res;
}

const char* * parse_words(const char* text) {
    const char* *words = NULL;
    size_t words_len = 0;
    const char* current = "";
    long long i = 0LL;
    while (i < strlen(text)) {
        const char* c = _substring(text, i, i + 1LL);
        if (strcmp(c, ",") == 0) {
            words = list_append_str(words, &words_len, current);
            current = "";
        } else {
            if (strcmp(c, "\"") == 0) {
            } else {
                if ((strcmp(c, "\r") == 0) || (strcmp(c, "\n") == 0)) {
                } else {
                    current = str_concat(current, c);
                }
            }
        }
        i = i + 1LL;
    }
    if (strlen(current) > 0LL) {
        words = list_append_str(words, &words_len, current);
    }
    return parse_words_len = words_len, words;
}

long long word_value(const char* word) {
    long long total = 0LL;
    long long i = 0LL;
    while (i < strlen(word)) {
        total = (total + ord(_substring(word, i, i + 1LL))) - 64LL;
        i = i + 1LL;
    }
    return total;
}

long long contains(long long * xs, size_t xs_len, long long target) {
    for (size_t __i = 0; __i < xs_len; __i++) {
        long long x = xs[__i];
        if (x == target) {
            return 1LL;
        }
    }
    return 0LL;
}

long long solution() {
    long long text = read_file("words.txt");
    const char* *words = parse_words(text);
    size_t words_len = parse_words_len;
    long long *tri = triangular_numbers(100LL);
    size_t tri_len = triangular_numbers_len;
    long long count_ = 0LL;
    for (size_t __i = 0; __i < words_len; __i++) {
        const char* w = words[__i];
        long long v = word_value(w);
        if (contains(tri, tri_len, v)) {
            count_ = count_ + 1LL;
        }
    }
    return count_;
}

int main(void) {
    {
        long long __start = _now();
        puts(str_int(solution()));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
